# RedTeam-LLM

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  config.yaml  config_dolphin.yaml  config_gemma3.yaml  config_llama3.yaml  config_phi3.yaml  consolidated_results.json  final_report.md  main.py  pyproject.toml  requirements.txt  results.json
.github/workflows/: ci.yml
.notebooks/: gsm8k_g2pia_demo.ipynb
.notebooks/reports/: g2pia_gsm8k_gemma3.html  g2pia_gsm8k_gemma3.json
dashboard/: app.py
dashboard/templates/: index.html
docs/: architecture.md  g2pia_readme.md  windows_setup.md
notebooks/: gan_attack_demo.ipynb  gsm8k_g2pia_demo.ipynb
reports/: g2pia_lab_run.json  sample_g2pia_report.json
scripts/: demo_g2pia.py  gan_attack_demo.py  test_gan_attack_script.py
src/redteam/: __init__.py
src/redteam/modules/: __init__.py  g2pia_defensive.py
src/redteam_llm/: __init__.py  attacker.py  cli.py  config.py  g2pia_defensive.py  gan_attack.py  judge.py  llm.py  orchestrator.py  types.py
tests/: test_g2pia.py  test_judge.py
tests/data/: g2pia_synthetic.jsonl  gsm8k_mini.jsonl
