[project]
name = "redteam-llm"
version = "0.1.0"
description = "A local Red Team evaluation framework for LLMs using Ollama."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ollama",
    "pyyaml",
    "flask",
    "click",
    "rich",
    "pydantic",
    "pandas>=2.3.3",
    "datasets>=4.4.1",
]

[project.scripts]
redteam = "redteam_llm.cli:cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
