[project]
name = "redteam-llm"
version = "0.1.0"
description = "A local Red Team evaluation framework for LLMs using Ollama."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ollama",
    "pyyaml",
    "flask",
    "click",
    "rich",
    "pydantic",
    "numpy",
    "pandas>=2.3.3",
    "datasets>=4.4.1",
]

[project.optional-dependencies]
g2pia = [
    "gensim",
    "nltk",
    "sentence-transformers",
    "spacy",
]
dev = [
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
    "types-PyYAML",
]

[project.scripts]
redteam = "redteam_llm.cli:cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --cov=src/redteam_llm --cov=src/redteam/modules --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "scripts"]
exclude = [
    ".notebooks",
    "notebooks",
    "*.ipynb",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
no_implicit_optional = false
disable_error_code = ["arg-type", "assignment", "import-untyped", "no-any-return", "union-attr"]
